--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,13 +21,16 @@
         
         <activity
             android:name="com.example.homeguard.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+     		android:screenOrientation="portrait" 
+     		android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
