Fixed hostnames on config.ini file;

--- a/server/config.ini
+++ b/server/config.ini
@@ -5,11 +5,11 @@ APILogin=cenditheroddemingiviceds
 APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 
 [Raspberry]
-RaspHost=neryuuk.noip.me
+RaspHost=0.0.0.0
 RaspPort=5050
 
 [Websocket]
-WSHost=neryuuk.noip.com
+WSHost=localhost
 
 [Server Arguments]
 Debug=no
