Fixed settings in server/config.ini;

--- a/server/config.ini
+++ b/server/config.ini
@@ -1,6 +1,7 @@
 [Database]
 DBHost=neryuuk.cloudant.com
 DBLogin=neryuuk
+DBName=homeguard
 APILogin=cenditheroddemingiviceds
 APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 
@@ -9,7 +10,7 @@ RaspHost=0.0.0.0
 RaspPort=5050
 
 [Websocket]
-WSHost=localhost
+WSHost=ws://localhost
 
 [Server Arguments]
 Debug=no
