--- a/server/config.ini
+++ b/server/config.ini
@@ -8,7 +8,7 @@ APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 [Raspberry]
 ;RaspHost=0.0.0.0
 RaspHost=192.168.2.200
-;RaspPort=5050
+RaspPort=5050
 
 [Websocket]
 ;WSHost=ws://localhost
