--- a/server/config.ini
+++ b/server/config.ini
@@ -6,13 +6,13 @@ APILogin=cenditheroddemingiviceds
 APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 
 [Raspberry]
-;RaspHost=0.0.0.0
-RaspHost=192.168.2.200
+RaspHost=0.0.0.0
+;RaspHost=192.168.2.200
 RaspPort=5050
 
 [Websocket]
-;WSHost=ws://localhost
-WSHost=ws://neryuuk.noip.me
+WSHost=ws://localhost
+;WSHost=ws://neryuuk.noip.me
 
 [Server Arguments]
 Debug=no
