Changed the name of the config parameters on config.ini;

--- a/server/config.ini
+++ b/server/config.ini
@@ -1,24 +1,24 @@
 [Database]
-DBHost=neryuuk.cloudant.com
-DBLogin=neryuuk
-DBName=homeguard
+host=neryuuk.cloudant.com
+login=neryuuk
+name=homeguard
 APILogin=cenditheroddemingiviceds
 APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 
 [Raspberry]
-;RaspHost=0.0.0.0
-RaspHost=192.168.2.200
-RaspPort=5050
+;host=0.0.0.0
+host=192.168.2.200
+port=5050
 
 [Websocket]
-WSHost=ws://localhost
-;WSHost=ws://neryuuk.noip.me
+;host=ws://localhost
+host=ws://neryuuk.noip.me
 
 [Server Arguments]
-Debug=no
+debug=no
 
 [Path]
-ImgPath=image/
-VideoPath=video/
+image=image/
+video=video/
 
 [Camera]
