Testing server with IP bind on 0.0.0.0 and websocket on localhost;

--- a/server/config.ini
+++ b/server/config.ini
@@ -6,13 +6,13 @@ APILogin=cenditheroddemingiviceds
 APIPass=JHHEEBQm17EU3RaGo6mbY6JY
 
 [Raspberry]
-;host=0.0.0.0
-host=192.168.2.200
+host=0.0.0.0
+;host=192.168.2.200
 port=5050
 
 [Websocket]
-;host=ws://localhost
-host=ws://neryuuk.noip.me
+host=ws://localhost
+;host=ws://neryuuk.noip.me
 
 [Server Arguments]
 debug=no
