--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,29 +8,42 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
-<!--     <application -->
-<!--         android:allowBackup="true" -->
-<!--         android:icon="@drawable/ic_launcher" -->
-<!--         android:label="@string/app_name" -->
-<!--         android:theme="@style/AppTheme" > -->
+    <!-- <application -->
+    <!-- android:allowBackup="true" -->
+    <!-- android:icon="@drawable/ic_launcher" -->
+    <!-- android:label="@string/app_name" -->
+    <!-- android:theme="@style/AppTheme" > -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/NoActionBar" >
-        
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.homeguard.MainActivity"
+            android:name="com.example.homeguard.LoginActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-     		android:screenOrientation="portrait" 
-     		android:configChanges="keyboardHidden|orientation|screenSize">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.homeguard.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="user" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.homeguard.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
